chore: Finalize code with formatting, adding ENV var to .ENV & misc.